--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vuetify": "^1.5.18",
+    "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.9.3",
+    "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-airbnb": "^4.0.1",
     "babel-eslint": "^10.0.3",
     "electron": "^6.0.7",
@@ -36,15 +36,17 @@
     "eslint-plugin-vue": "^5.2.3",
     "husky": "^2.7.0",
     "lint-staged": "^8.2.1",
-    "node-sass": "^4.12.0",
+    "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
     "vue-cli-plugin-electron-builder": "^1.4.0",
-    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
